## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	ibm_db2/data.sql \
	ibm_db2/images.sql \
	ibm_db2/schema.sql \
	mysql/data.sql \
	mysql/images.sql \
	mysql/schema.sql \
	oracle/data.sql \
	oracle/images.sql \
	oracle/schema.sql \
	postgresql/data.sql \
	postgresql/images.sql \
	postgresql/schema.sql \
	sqlite3/data.sql \
	sqlite3/images.sql \
	sqlite3/schema.sql
